--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ body{
     
 }
 .cover{
-    background-image: url(/netflix1.jpg);
+    background-image: url(/images/netflix1.jpg);
 }
 .container{
    
